support for max data size